web-frontend/src/app/pages/profile/profile.component.scss
@import '../../../colors';

#avatar-group {
  display: flex;
  padding: 10px 0;
}

.avatar-preview {
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: white;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border: 2px solid black;
  margin: 0 10px 0 -7px;
  cursor: pointer;
}

.mat-mdc-radio-checked .avatar-preview {
  border-color: $primary;
}

#color-preview {
  cursor: pointer;
  align-self: center;
  margin-left: 10px;
  border: 1px solid grey;
  width: 20px;
  height: 20px;
}

